# Otus-cpp-hw2

./: CMakeLists.txt  main.cpp
.github/workflows/: c-cpp.yml
